--- a/usagestats.ipynb
+++ b/usagestats.ipynb
@@ -2,15 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'List of devices attached\\r\\n143028c2\\tdevice\\r\\n\\r\\n'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='adb shell dumpsys usagestats > usagestats.log', returncode=0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command_devices = \"adb devices\"\n",
+    "print(subprocess.check_output(command_devices, shell=True))\n",
     "\n",
-    "# 打开文件并读取内容，指定编码方式为\"utf-16 le\"\n",
-    "with open('usagestats.txt', 'r', encoding='utf-16 le') as file:\n",
+    "command = \"adb shell dumpsys usagestats > usagestats.log\"\n",
+    "subprocess.run(command, shell=True, check=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 打开文件并读取内容，指定编码方式为\"utf-8\"\n",
+    "with open('usagestats.log', 'r', encoding='utf-8') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# 找到包含\"Last 24 hour events\"和\"In-memory daily stats\"的行，获取这两行之间的所有行\n",
@@ -21,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 将DataFrame保存为csv文件\n",
-    "df.to_csv('usagestats.csv', index=False)"
+    "df.to_csv('usagestats.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
@@ -63,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
