更新清洗后的usagestats

--- a/usagestats.ipynb
+++ b/usagestats.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 数据收集"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -83,6 +90,58 @@
    "source": [
     "# 将DataFrame保存为csv文件\n",
     "df.to_csv('usagestats.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 数据清洗"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 读取CSV文件到dataframe_temp\n",
+    "dataframe_temp = pd.read_csv('usagestats.csv')\n",
+    "\n",
+    "# 删除'package'列，添加新的'status'列\n",
+    "# dataframe_temp = dataframe_temp.drop(columns='package')\n",
+    "dataframe_temp['status'] = ''\n",
+    "dataframe_temp = dataframe_temp.reindex(columns=['time', 'status', 'type', 'package'])\n",
+    "\n",
+    "# 创建新的dataframe_train\n",
+    "dataframe_train = pd.DataFrame()\n",
+    "\n",
+    "# 从dataframe_temp中提取特定时间段的数据，将这些数据的'status'设置为特定的状态\n",
+    "dataframe_temp['time'] = pd.to_datetime(dataframe_temp['time'])\n",
+    "dataframe_train_list = [\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 11:48:00') & (dataframe_temp['time'] <= '2024-06-06 11:55:00')].assign(status='walk'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 11:59:00') & (dataframe_temp['time'] <= '2024-06-06 12:05:00')].assign(status='bike'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:08:00') & (dataframe_temp['time'] <= '2024-06-06 12:10:00')].assign(status='run'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:12:00') & (dataframe_temp['time'] <= '2024-06-06 12:15:00')].assign(status='sit')\n",
+    "]\n",
+    "dataframe_train = pd.concat(dataframe_train_list)\n",
+    "\n",
+    "# 创建新的dataframe_test\n",
+    "dataframe_test = pd.DataFrame()\n",
+    "\n",
+    "# 从dataframe_temp中提取特定时间段的数据，将这些数据的'status'设置为特定的状态\n",
+    "dataframe_test_list = [\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:17:00') & (dataframe_temp['time'] <= '2024-06-06 12:18:00')].assign(status='sit'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:18:00') & (dataframe_temp['time'] <= '2024-06-06 12:19:00')].assign(status='run'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:19:00') & (dataframe_temp['time'] <= '2024-06-06 12:20:20')].assign(status='walk'),\n",
+    "    dataframe_temp[(dataframe_temp['time'] >= '2024-06-06 12:20:20') & (dataframe_temp['time'] <= '2024-06-06 12:24:00')].assign(status='bike')\n",
+    "]\n",
+    "dataframe_test = pd.concat(dataframe_test_list)\n",
+    "\n",
+    "dataframe_train.to_csv('train_usagestats.csv', index=False, encoding='utf-8')\n",
+    "dataframe_test.to_csv('test_usagestats.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
