--- a/phone_data/usagestats.ipynb
+++ b/phone_data/usagestats.ipynb
@@ -45,7 +45,7 @@
     "command_devices = \"adb devices\"\n",
     "print(subprocess.check_output(command_devices, shell=True))\n",
     "\n",
-    "command = \"adb shell dumpsys usagestats > usagestats.log\"\n",
+    "command = \"adb shell dumpsys usagestats > raw\\\\usagestats.log\"\n",
     "subprocess.run(command, shell=True, check=True)"
    ]
   },
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# 打开文件并读取内容，指定编码方式为\"utf-8\"\n",
-    "with open('usagestats.log', 'r', encoding='utf-8') as file:\n",
+    "with open('raw/usagestats.log', 'r', encoding='utf-8') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# 找到包含\"Last 24 hour events\"和\"In-memory daily stats\"的行，获取这两行之间的所有行\n",
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# 将DataFrame保存为csv文件\n",
-    "df.to_csv('usagestats.csv', index=False, encoding='utf-8')"
+    "df.to_csv('raw/usagestats.csv', index=False, encoding='utf-8')"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "import pandas as pd\n",
     "\n",
     "# 读取CSV文件到dataframe_temp\n",
-    "dataframe_temp = pd.read_csv('usagestats.csv')\n",
+    "dataframe_temp = pd.read_csv('raw/usagestats.csv')\n",
     "\n",
     "# 删除'package'列，添加新的'status'列\n",
     "# dataframe_temp = dataframe_temp.drop(columns='package')\n",
@@ -140,8 +140,8 @@
     "]\n",
     "dataframe_test = pd.concat(dataframe_test_list)\n",
     "\n",
-    "dataframe_train.to_csv('train_usagestats.csv', index=False, encoding='utf-8')\n",
-    "dataframe_test.to_csv('test_usagestats.csv', index=False, encoding='utf-8')"
+    "dataframe_train.to_csv('clean/train_usagestats.csv', index=False, encoding='utf-8')\n",
+    "dataframe_test.to_csv('clean/test_usagestats.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
