--- a/mat_data/sensor_data_cleaning.ipynb
+++ b/mat_data/sensor_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_and_average(df):\n",
-    "    # Convert Timestamp to datetime and remove milliseconds\n",
-    "    df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"]).dt.floor(\"S\")\n",
     "\n",
     "    # Keep the relevant columns\n",
     "    # Including extra columns: 'altitude', 'course', 'hacc', 'latitude', 'longitude', 'speed'\n",
@@ -60,28 +58,25 @@
     "                lambda row: row[col] if row[\"Type\"] == t else None, axis=1\n",
     "            )\n",
     "\n",
-    "    # Group by Timestamp and calculate mean for numeric columns\n",
-    "    df_grouped = df.groupby(\"Timestamp\").mean(numeric_only=True).reset_index()\n",
-    "\n",
     "    # Explicitly list columns to retain\n",
     "    columns_to_keep = [\"Timestamp\", \"altitude\", \"course\", \"hacc\", \"latitude\", \"longitude\", \"speed\"] + [\n",
     "        f\"{t}_{col}\"\n",
     "        for t in types\n",
     "        for col in [\"X\", \"Y\", \"Z\"]\n",
-    "        if f\"{t}_{col}\" in df_grouped.columns\n",
+    "        if f\"{t}_{col}\" in df.columns\n",
     "    ]\n",
-    "    df_grouped = df_grouped[columns_to_keep]\n",
+    "    df = df[columns_to_keep]\n",
     "\n",
     "    # Round the numeric columns to the desired decimal places\n",
     "    # Uncomment and modify the line below to set the desired decimal places\n",
-    "    df_grouped = df_grouped.round(6)\n",
+    "    df = df.round(6)\n",
     "\n",
-    "    return df_grouped"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +229,7 @@
        "4       NaN     NaN    NaN        NaN        NaN    NaN  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +238,8 @@
     "import pandas as pd\n",
     "\n",
     "# Load the dataset\n",
-    "file_name = \"sensorlog_20240606_121611 synthesis\"\n",
+    "list_of_files = [\"sensorlog_20240606_114748 walk\", \"sensorlog_20240606_115847 cycling\", \"sensorlog_20240606_120745 run\",\"sensorlog_20240606_121202 sit\",\"sensorlog_20240606_121611 synthesis\"]\n",
+    "file_name = list_of_files[4]\n",
     "file_path = \"./raw/\" + file_name + \"-raw.csv\"\n",
     "data = pd.read_csv(file_path)\n",
     "data.head()"
@@ -260,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -388,13 +384,14 @@
        "4    51.469     0.0  16.86  52.334767   4.861806    0.0  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert Timestamp to datetime format for easier handling\n",
+    "\n",
     "data['Timestamp'] = pd.to_datetime(data['Timestamp'])\n",
     "\n",
     "# Create a new column for the second of each timestamp\n",
@@ -433,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -458,122 +455,187 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Timestamp</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>Z</th>\n",
-       "      <th>Type</th>\n",
        "      <th>altitude</th>\n",
        "      <th>course</th>\n",
        "      <th>hacc</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>speed</th>\n",
+       "      <th>Acceleration_X</th>\n",
+       "      <th>Acceleration_Y</th>\n",
+       "      <th>Acceleration_Z</th>\n",
+       "      <th>MagneticField_X</th>\n",
+       "      <th>MagneticField_Y</th>\n",
+       "      <th>MagneticField_Z</th>\n",
+       "      <th>Orientation_X</th>\n",
+       "      <th>Orientation_Y</th>\n",
+       "      <th>Orientation_Z</th>\n",
+       "      <th>AngularVelocity_X</th>\n",
+       "      <th>AngularVelocity_Y</th>\n",
+       "      <th>AngularVelocity_Z</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2024-06-06 12:16:11.345</td>\n",
-       "      <td>0.212961</td>\n",
-       "      <td>3.571288</td>\n",
-       "      <td>9.809975</td>\n",
-       "      <td>Position</td>\n",
        "      <td>51.469</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.86</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.212961</td>\n",
+       "      <td>3.571288</td>\n",
+       "      <td>9.809975</td>\n",
+       "      <td>8.025001</td>\n",
+       "      <td>-21.356251</td>\n",
+       "      <td>-35.043751</td>\n",
+       "      <td>-134.235852</td>\n",
+       "      <td>-21.904164</td>\n",
+       "      <td>-3.961019</td>\n",
+       "      <td>-0.03036</td>\n",
+       "      <td>-0.061785</td>\n",
+       "      <td>-0.033289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-06-06 12:16:11.499</td>\n",
-       "      <td>0.212961</td>\n",
-       "      <td>3.571288</td>\n",
-       "      <td>9.809975</td>\n",
-       "      <td>Acceleration</td>\n",
        "      <td>51.469</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.86</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.212961</td>\n",
+       "      <td>3.571288</td>\n",
+       "      <td>9.809975</td>\n",
+       "      <td>8.025001</td>\n",
+       "      <td>-21.356251</td>\n",
+       "      <td>-35.043751</td>\n",
+       "      <td>-134.235852</td>\n",
+       "      <td>-21.904164</td>\n",
+       "      <td>-3.961019</td>\n",
+       "      <td>-0.03036</td>\n",
+       "      <td>-0.061785</td>\n",
+       "      <td>-0.033289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-06-06 12:16:11.519</td>\n",
-       "      <td>0.290130</td>\n",
-       "      <td>3.616751</td>\n",
-       "      <td>9.575478</td>\n",
-       "      <td>Acceleration</td>\n",
        "      <td>51.469</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.86</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.290130</td>\n",
+       "      <td>3.616751</td>\n",
+       "      <td>9.575478</td>\n",
+       "      <td>8.025001</td>\n",
+       "      <td>-21.356251</td>\n",
+       "      <td>-35.043751</td>\n",
+       "      <td>-134.235852</td>\n",
+       "      <td>-21.904164</td>\n",
+       "      <td>-3.961019</td>\n",
+       "      <td>-0.03036</td>\n",
+       "      <td>-0.061785</td>\n",
+       "      <td>-0.033289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-06-06 12:16:11.539</td>\n",
-       "      <td>0.607179</td>\n",
-       "      <td>3.382853</td>\n",
-       "      <td>8.596215</td>\n",
-       "      <td>Acceleration</td>\n",
        "      <td>51.469</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.86</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.607179</td>\n",
+       "      <td>3.382853</td>\n",
+       "      <td>8.596215</td>\n",
+       "      <td>8.025001</td>\n",
+       "      <td>-21.356251</td>\n",
+       "      <td>-35.043751</td>\n",
+       "      <td>-134.235852</td>\n",
+       "      <td>-21.904164</td>\n",
+       "      <td>-3.961019</td>\n",
+       "      <td>-0.03036</td>\n",
+       "      <td>-0.061785</td>\n",
+       "      <td>-0.033289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-06-06 12:16:11.557</td>\n",
-       "      <td>8.025001</td>\n",
-       "      <td>-21.356251</td>\n",
-       "      <td>-35.043751</td>\n",
-       "      <td>MagneticField</td>\n",
        "      <td>51.469</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16.86</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.769891</td>\n",
+       "      <td>3.322434</td>\n",
+       "      <td>8.275876</td>\n",
+       "      <td>8.025001</td>\n",
+       "      <td>-21.356251</td>\n",
+       "      <td>-35.043751</td>\n",
+       "      <td>-134.235852</td>\n",
+       "      <td>-21.904164</td>\n",
+       "      <td>-3.961019</td>\n",
+       "      <td>-0.03036</td>\n",
+       "      <td>-0.061785</td>\n",
+       "      <td>-0.033289</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Timestamp         X          Y          Z           Type  \\\n",
-       "0 2024-06-06 12:16:11.345  0.212961   3.571288   9.809975       Position   \n",
-       "1 2024-06-06 12:16:11.499  0.212961   3.571288   9.809975   Acceleration   \n",
-       "2 2024-06-06 12:16:11.519  0.290130   3.616751   9.575478   Acceleration   \n",
-       "3 2024-06-06 12:16:11.539  0.607179   3.382853   8.596215   Acceleration   \n",
-       "4 2024-06-06 12:16:11.557  8.025001 -21.356251 -35.043751  MagneticField   \n",
+       "                Timestamp  altitude  course   hacc   latitude  longitude  \\\n",
+       "0 2024-06-06 12:16:11.345    51.469     0.0  16.86  52.334767   4.861806   \n",
+       "1 2024-06-06 12:16:11.499    51.469     0.0  16.86  52.334767   4.861806   \n",
+       "2 2024-06-06 12:16:11.519    51.469     0.0  16.86  52.334767   4.861806   \n",
+       "3 2024-06-06 12:16:11.539    51.469     0.0  16.86  52.334767   4.861806   \n",
+       "4 2024-06-06 12:16:11.557    51.469     0.0  16.86  52.334767   4.861806   \n",
        "\n",
-       "   altitude  course   hacc   latitude  longitude  speed  \n",
-       "0    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "1    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "2    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "3    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "4    51.469     0.0  16.86  52.334767   4.861806    0.0  "
+       "   speed  Acceleration_X  Acceleration_Y  Acceleration_Z  MagneticField_X  \\\n",
+       "0    0.0        0.212961        3.571288        9.809975         8.025001   \n",
+       "1    0.0        0.212961        3.571288        9.809975         8.025001   \n",
+       "2    0.0        0.290130        3.616751        9.575478         8.025001   \n",
+       "3    0.0        0.607179        3.382853        8.596215         8.025001   \n",
+       "4    0.0        0.769891        3.322434        8.275876         8.025001   \n",
+       "\n",
+       "   MagneticField_Y  MagneticField_Z  Orientation_X  Orientation_Y  \\\n",
+       "0       -21.356251       -35.043751    -134.235852     -21.904164   \n",
+       "1       -21.356251       -35.043751    -134.235852     -21.904164   \n",
+       "2       -21.356251       -35.043751    -134.235852     -21.904164   \n",
+       "3       -21.356251       -35.043751    -134.235852     -21.904164   \n",
+       "4       -21.356251       -35.043751    -134.235852     -21.904164   \n",
+       "\n",
+       "   Orientation_Z  AngularVelocity_X  AngularVelocity_Y  AngularVelocity_Z  \n",
+       "0      -3.961019           -0.03036          -0.061785          -0.033289  \n",
+       "1      -3.961019           -0.03036          -0.061785          -0.033289  \n",
+       "2      -3.961019           -0.03036          -0.061785          -0.033289  \n",
+       "3      -3.961019           -0.03036          -0.061785          -0.033289  \n",
+       "4      -3.961019           -0.03036          -0.061785          -0.033289  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "processed_data_cleaned=remove_outliers_and_apply_thresholds(processed_data, columns_to_check, thresholds)\n",
+    "processed_data_cleaned=merge_and_average(data)\n",
+    "processed_data_cleaned = processed_data_cleaned.drop(['Position_X', 'Position_Y', 'Position_Z'], axis=1)\n",
+    "processed_data_cleaned = processed_data_cleaned.interpolate(method='linear').bfill().ffill()\n",
     "processed_data_cleaned.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
