--- a/phone_data/usagestats.ipynb
+++ b/phone_data/usagestats.ipynb
@@ -105,8 +105,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# 读取CSV文件到dataframe_temp\n",
     "dataframe_temp = pd.read_csv('raw/usagestats.csv')\n",
     "\n",
@@ -140,8 +138,81 @@
     "]\n",
     "dataframe_test = pd.concat(dataframe_test_list)\n",
     "\n",
-    "dataframe_train.to_csv('clean/train_usagestats.csv', index=False, encoding='utf-8')\n",
-    "dataframe_test.to_csv('clean/test_usagestats.csv', index=False, encoding='utf-8')"
+    "dataframe_train.to_csv('raw/train_raw.csv', index=False, encoding='utf-8')\n",
+    "dataframe_test.to_csv('raw/test_raw.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 属性修改"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取 CSV 文件\n",
+    "dataframe = pd.read_csv('raw/train_raw.csv')\n",
+    "\n",
+    "# 删除 'package' 列\n",
+    "dataframe = dataframe.drop(columns=['package', 'status'])\n",
+    "\n",
+    "# 创建新的 'usage' 列\n",
+    "dataframe['usage'] = 'use'\n",
+    "\n",
+    "# 更改列的顺序\n",
+    "dataframe = dataframe.reindex(columns=['time', 'usage', 'type'])\n",
+    "\n",
+    "# 根据 'type' 列的值来设置 'usage' 列的值\n",
+    "usage = 'use'\n",
+    "for i, row in dataframe.iterrows():\n",
+    "    if row['type'] == 'SCREEN_NON_INTERACTIVE':\n",
+    "        usage = 'off'\n",
+    "    elif row['type'] == 'KEYGUARD_SHOWN':\n",
+    "        usage = 'on'\n",
+    "    elif row['type'] == 'SCREEN_INTERACTIVE':\n",
+    "        usage = 'use'\n",
+    "    dataframe.at[i, 'usage'] = usage\n",
+    "\n",
+    "# 保存到新的 CSV 文件\n",
+    "dataframe.to_csv('cleaned/train_phone.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取 CSV 文件\n",
+    "dataframe = pd.read_csv('raw/test_raw.csv')\n",
+    "\n",
+    "# 删除 'package' 列\n",
+    "dataframe = dataframe.drop(columns=['package', 'status'])\n",
+    "\n",
+    "# 创建新的 'usage' 列\n",
+    "dataframe['usage'] = 'off'\n",
+    "\n",
+    "# 更改列的顺序\n",
+    "dataframe = dataframe.reindex(columns=['time', 'usage', 'type'])\n",
+    "\n",
+    "# 根据 'type' 列的值来设置 'usage' 列的值\n",
+    "usage = 'off'\n",
+    "for i, row in dataframe.iterrows():\n",
+    "    if row['type'] == 'SCREEN_NON_INTERACTIVE':\n",
+    "        usage = 'off'\n",
+    "    elif row['type'] == 'KEYGUARD_SHOWN':\n",
+    "        usage = 'on'\n",
+    "    elif row['type'] == 'SCREEN_INTERACTIVE':\n",
+    "        usage = 'use'\n",
+    "    dataframe.at[i, 'usage'] = usage\n",
+    "\n",
+    "# 保存到新的 CSV 文件\n",
+    "dataframe.to_csv('cleaned/test_phone.csv', index=False, encoding='utf-8')"
    ]
   }
  ],
