--- a/mat_data/sensor_data_cleaning.ipynb
+++ b/mat_data/sensor_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4       NaN     NaN    NaN        NaN        NaN    NaN  "
       ]
      },
-     "execution_count": 221,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -301,9 +292,9 @@
        "      <td>3.571288</td>\n",
        "      <td>9.809975</td>\n",
        "      <td>Position</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4690</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.8600</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -315,9 +306,9 @@
        "      <td>3.571288</td>\n",
        "      <td>9.809975</td>\n",
        "      <td>Acceleration</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4815</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.8119</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -329,9 +320,9 @@
        "      <td>3.616751</td>\n",
        "      <td>9.575478</td>\n",
        "      <td>Acceleration</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4940</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.7638</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -343,9 +334,9 @@
        "      <td>3.382853</td>\n",
        "      <td>8.596215</td>\n",
        "      <td>Acceleration</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.5065</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.7157</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -357,9 +348,9 @@
        "      <td>-21.356251</td>\n",
        "      <td>-35.043751</td>\n",
        "      <td>MagneticField</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.5190</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.6676</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -376,15 +367,15 @@
        "3 2024-06-06 12:16:11.539  0.607179   3.382853   8.596215   Acceleration   \n",
        "4 2024-06-06 12:16:11.557  8.025001 -21.356251 -35.043751  MagneticField   \n",
        "\n",
-       "   altitude  course   hacc   latitude  longitude  speed  \n",
-       "0    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "1    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "2    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "3    51.469     0.0  16.86  52.334767   4.861806    0.0  \n",
-       "4    51.469     0.0  16.86  52.334767   4.861806    0.0  "
+       "   altitude  course     hacc   latitude  longitude  speed  \n",
+       "0   51.4690     0.0  16.8600  52.334767   4.861806    0.0  \n",
+       "1   51.4815     0.0  16.8119  52.334767   4.861806    0.0  \n",
+       "2   51.4940     0.0  16.7638  52.334767   4.861806    0.0  \n",
+       "3   51.5065     0.0  16.7157  52.334767   4.861806    0.0  \n",
+       "4   51.5190     0.0  16.6676  52.334767   4.861806    0.0  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +390,8 @@
     "\n",
     "# Fill geolocation columns forward and backward to ensure non-NaN values\n",
     "geolocation_columns = ['altitude', 'course', 'hacc', 'latitude', 'longitude', 'speed']\n",
-    "data[geolocation_columns] = data[geolocation_columns].ffill().bfill()\n",
+    "\n",
+    "data[geolocation_columns] = data[geolocation_columns].interpolate(method='linear', limit_direction='both',limit_area='inside')\n",
     "\n",
     "# Group by the new 'Second' column\n",
     "grouped = data.groupby('Second')\n",
@@ -430,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -479,9 +471,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2024-06-06 12:16:11.345</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4690</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.8600</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -501,9 +493,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-06-06 12:16:11.499</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4815</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.8119</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -523,9 +515,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-06-06 12:16:11.519</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.4940</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.7638</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -545,9 +537,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-06-06 12:16:11.539</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.5065</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.7157</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -567,9 +559,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-06-06 12:16:11.557</td>\n",
-       "      <td>51.469</td>\n",
+       "      <td>51.5190</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.86</td>\n",
+       "      <td>16.6676</td>\n",
        "      <td>52.334767</td>\n",
        "      <td>4.861806</td>\n",
        "      <td>0.0</td>\n",
@@ -591,12 +583,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                Timestamp  altitude  course   hacc   latitude  longitude  \\\n",
-       "0 2024-06-06 12:16:11.345    51.469     0.0  16.86  52.334767   4.861806   \n",
-       "1 2024-06-06 12:16:11.499    51.469     0.0  16.86  52.334767   4.861806   \n",
-       "2 2024-06-06 12:16:11.519    51.469     0.0  16.86  52.334767   4.861806   \n",
-       "3 2024-06-06 12:16:11.539    51.469     0.0  16.86  52.334767   4.861806   \n",
-       "4 2024-06-06 12:16:11.557    51.469     0.0  16.86  52.334767   4.861806   \n",
+       "                Timestamp  altitude  course     hacc   latitude  longitude  \\\n",
+       "0 2024-06-06 12:16:11.345   51.4690     0.0  16.8600  52.334767   4.861806   \n",
+       "1 2024-06-06 12:16:11.499   51.4815     0.0  16.8119  52.334767   4.861806   \n",
+       "2 2024-06-06 12:16:11.519   51.4940     0.0  16.7638  52.334767   4.861806   \n",
+       "3 2024-06-06 12:16:11.539   51.5065     0.0  16.7157  52.334767   4.861806   \n",
+       "4 2024-06-06 12:16:11.557   51.5190     0.0  16.6676  52.334767   4.861806   \n",
        "\n",
        "   speed  Acceleration_X  Acceleration_Y  Acceleration_Z  MagneticField_X  \\\n",
        "0    0.0        0.212961        3.571288        9.809975         8.025001   \n",
@@ -620,7 +612,7 @@
        "4      -3.961019           -0.03036          -0.061785          -0.033289  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,13 +621,68 @@
     "processed_data_cleaned=remove_outliers_and_apply_thresholds(processed_data, columns_to_check, thresholds)\n",
     "processed_data_cleaned=merge_and_average(data)\n",
     "processed_data_cleaned = processed_data_cleaned.drop(['Position_X', 'Position_Y', 'Position_Z'], axis=1)\n",
-    "processed_data_cleaned = processed_data_cleaned.interpolate(method='linear').bfill().ffill()\n",
+    "processed_data_cleaned=processed_data_cleaned.interpolate('linear', limit_direction='both').ffill().bfill()\n",
     "processed_data_cleaned.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_for_outliers(df):\n",
+    "    # Check longitude difference between consecutive timestamps\n",
+    "    longitude_diff = df['longitude'].diff()\n",
+    "    outliers_longitude = longitude_diff > 0.001\n",
+    "    if outliers_longitude.any():\n",
+    "        print(\"Longitude difference between consecutive timestamps exceeds the threshold.\")\n",
+    "        print(df[outliers_longitude])\n",
+    "\n",
+    "    latitude_diff = df['latitude'].diff()\n",
+    "    outliers_latitude = latitude_diff > 0.001\n",
+    "    if outliers_latitude.any():\n",
+    "        print(\"Latitude difference between consecutive timestamps exceeds the threshold.\")\n",
+    "        print(df[outliers_latitude])\n",
+    "\n",
+    "    altitude_diff = df['altitude'].diff()\n",
+    "    outliers_altitude = altitude_diff > 200\n",
+    "    if outliers_altitude.any():\n",
+    "        print(\"Altitude difference between consecutive timestamps exceeds the threshold.\")\n",
+    "        print(df[outliers_altitude])\n",
+    "\n",
+    "    speed_diff = df['speed'].diff()\n",
+    "    outliers_speed = speed_diff > 1000\n",
+    "    if outliers_speed.any():\n",
+    "        print(\"Speed difference between consecutive timestamps exceeds the threshold.\")\n",
+    "        print(df[outliers_speed])\n",
+    "\n",
+    "    # Return True if all checks pass, False otherwise\n",
+    "    return not (outliers_longitude.any() or outliers_latitude.any() or outliers_altitude.any() or outliers_speed.any())\n",
+    "\n",
+    "print(check_for_outliers(processed_data_cleaned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
