--- a/final_data/merge_data.ipynb
+++ b/final_data/merge_data.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "from functools import reduce"
    ]
   },
   {
@@ -53,61 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check band data-------------------------\n",
-      "(2124, 4)\n",
-      "dateTime     object\n",
-      "BandAccX    float64\n",
-      "BandAccY    float64\n",
-      "BandAccZ    float64\n",
-      "dtype: object\n",
-      "2024-06-06 11:48:12.529\n",
-      "Index(['dateTime', 'BandAccX', 'BandAccY', 'BandAccZ'], dtype='object')\n",
-      "check band data-------------------------\n",
-      "(1792, 4)\n",
-      "dateTime     object\n",
-      "BandAccX    float64\n",
-      "BandAccY    float64\n",
-      "BandAccZ    float64\n",
-      "dtype: object\n",
-      "2024-06-06 11:59:14.317\n",
-      "Index(['dateTime', 'BandAccX', 'BandAccY', 'BandAccZ'], dtype='object')\n",
-      "check band data-------------------------\n",
-      "(716, 4)\n",
-      "dateTime     object\n",
-      "BandAccX    float64\n",
-      "BandAccY    float64\n",
-      "BandAccZ    float64\n",
-      "dtype: object\n",
-      "2024-06-06 12:08:02.725\n",
-      "Index(['dateTime', 'BandAccX', 'BandAccY', 'BandAccZ'], dtype='object')\n",
-      "check band data-------------------------\n",
-      "(827, 4)\n",
-      "dateTime     object\n",
-      "BandAccX    float64\n",
-      "BandAccY    float64\n",
-      "BandAccZ    float64\n",
-      "dtype: object\n",
-      "2024-06-06 12:12:22.375\n",
-      "Index(['dateTime', 'BandAccX', 'BandAccY', 'BandAccZ'], dtype='object')\n",
-      "check band data-------------------------\n",
-      "(2351, 4)\n",
-      "dateTime     object\n",
-      "BandAccX    float64\n",
-      "BandAccY    float64\n",
-      "BandAccZ    float64\n",
-      "dtype: object\n",
-      "2024-06-06 12:16:35.141\n",
-      "Index(['dateTime', 'BandAccX', 'BandAccY', 'BandAccZ'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#检查一下读取后的文件\n",
@@ -136,106 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check mat data-------------------------\n",
-      "(32297, 11)\n",
-      "Timestamp     object\n",
-      "X            float64\n",
-      "Y            float64\n",
-      "Z            float64\n",
-      "Type          object\n",
-      "altitude     float64\n",
-      "course       float64\n",
-      "hacc         float64\n",
-      "latitude     float64\n",
-      "longitude    float64\n",
-      "speed        float64\n",
-      "dtype: object\n",
-      "06-Jun-2024 11:47:48.119\n",
-      "Index(['Timestamp', 'X', 'Y', 'Z', 'Type', 'altitude', 'course', 'hacc',\n",
-      "       'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n",
-      "check mat data-------------------------\n",
-      "(28120, 11)\n",
-      "Timestamp     object\n",
-      "X            float64\n",
-      "Y            float64\n",
-      "Z            float64\n",
-      "Type          object\n",
-      "altitude     float64\n",
-      "course       float64\n",
-      "hacc         float64\n",
-      "latitude     float64\n",
-      "longitude    float64\n",
-      "speed        float64\n",
-      "dtype: object\n",
-      "06-Jun-2024 11:58:47.466\n",
-      "Index(['Timestamp', 'X', 'Y', 'Z', 'Type', 'altitude', 'course', 'hacc',\n",
-      "       'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n",
-      "check mat data-------------------------\n",
-      "(12080, 11)\n",
-      "Timestamp     object\n",
-      "X            float64\n",
-      "Y            float64\n",
-      "Z            float64\n",
-      "Type          object\n",
-      "altitude     float64\n",
-      "course       float64\n",
-      "hacc         float64\n",
-      "latitude     float64\n",
-      "longitude    float64\n",
-      "speed        float64\n",
-      "dtype: object\n",
-      "06-Jun-2024 12:07:45.790\n",
-      "Index(['Timestamp', 'X', 'Y', 'Z', 'Type', 'altitude', 'course', 'hacc',\n",
-      "       'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n",
-      "check mat data-------------------------\n",
-      "(13903, 11)\n",
-      "Timestamp     object\n",
-      "X            float64\n",
-      "Y            float64\n",
-      "Z            float64\n",
-      "Type          object\n",
-      "altitude     float64\n",
-      "course       float64\n",
-      "hacc         float64\n",
-      "latitude     float64\n",
-      "longitude    float64\n",
-      "speed        float64\n",
-      "dtype: object\n",
-      "06-Jun-2024 12:12:02.585\n",
-      "Index(['Timestamp', 'X', 'Y', 'Z', 'Type', 'altitude', 'course', 'hacc',\n",
-      "       'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n",
-      "check mat data-------------------------\n",
-      "(35580, 11)\n",
-      "Timestamp     object\n",
-      "X            float64\n",
-      "Y            float64\n",
-      "Z            float64\n",
-      "Type          object\n",
-      "altitude     float64\n",
-      "course       float64\n",
-      "hacc         float64\n",
-      "latitude     float64\n",
-      "longitude    float64\n",
-      "speed        float64\n",
-      "dtype: object\n",
-      "06-Jun-2024 12:16:11.345\n",
-      "Index(['Timestamp', 'X', 'Y', 'Z', 'Type', 'altitude', 'course', 'hacc',\n",
-      "       'latitude', 'longitude', 'speed'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0,5):\n",
     "    df_mat=pd.read_csv(os.getcwd().replace('final_data',mat_file_path)+ mat_file[i])\n",
@@ -248,32 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check phone data-------------------------\n",
-      "(67, 3)\n",
-      "time     object\n",
-      "usage    object\n",
-      "type     object\n",
-      "dtype: object\n",
-      "2024-06-06 12:17:17\n",
-      "Index(['time', 'usage', 'type'], dtype='object')\n",
-      "check phone data-------------------------\n",
-      "(177, 3)\n",
-      "time     object\n",
-      "usage    object\n",
-      "type     object\n",
-      "dtype: object\n",
-      "2024-06-06 11:48:01\n",
-      "Index(['time', 'usage', 'type'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for i in range(0,2):\n",
@@ -287,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -297,49 +126,56 @@
       "dateTime    datetime64[ns]\n",
       "usage               object\n",
       "type                object\n",
-      "dtype: object\n"
+      "dtype: object\n",
+      "Index(['dateTime', 'usage', 'type'], dtype='object')\n",
+      "(244, 3)\n",
+      "             dateTime usage              type\n",
+      "0 2024-06-06 11:48:01   use   ACTIVITY_PAUSED\n",
+      "1 2024-06-06 11:48:01   use  ACTIVITY_RESUMED\n",
+      "2 2024-06-06 11:48:02   use  ACTIVITY_STOPPED\n",
+      "3 2024-06-06 11:48:03   use   ACTIVITY_PAUSED\n",
+      "4 2024-06-06 11:48:03   use  ACTIVITY_RESUMED\n",
+      "               dateTime usage                    type\n",
+      "239 2024-06-06 12:21:34   use         KEYGUARD_HIDDEN\n",
+      "240 2024-06-06 12:21:35   off  SCREEN_NON_INTERACTIVE\n",
+      "241 2024-06-06 12:21:35   off         ACTIVITY_PAUSED\n",
+      "242 2024-06-06 12:21:35   off        ACTIVITY_STOPPED\n",
+      "243 2024-06-06 12:21:36    on          KEYGUARD_SHOWN\n"
      ]
     }
    ],
    "source": [
-    "#合并tain data，即 walk，bike，run，sit，syn产生的数据\n",
-    "df_phone = pd.read_csv(os.getcwd().replace('final_data',phone_file_path)+ phone_file[0])\n",
-    "\n",
     "#处理phone数据\n",
+    "df_phone_test = pd.read_csv(os.getcwd().replace('final_data',phone_file_path)+ phone_file[0])\n",
+    "df_phone_train = pd.read_csv(os.getcwd().replace('final_data',phone_file_path)+ phone_file[1])\n",
+    "#合并两个表\n",
+    "df_phone = pd.concat([df_phone_test,df_phone_train],ignore_index=True)\n",
     "# 重命名时间戳，统一为dateTime\n",
     "df_phone.rename(columns={'time': 'dateTime'}, inplace=True)\n",
     "# 把时间戳转化为datetime格式\n",
     "df_phone['dateTime'] = pd.to_datetime(df_phone['dateTime'])\n",
+    "# 按时间戳排序\n",
+    "df_phone = df_phone.sort_values(by='dateTime')\n",
+    "# 重置索引\n",
+    "df_phone = df_phone.reset_index(drop=True)\n",
     "\n",
     "#处理heart数据\n",
     "df_heart_rate = pd.read_csv(os.getcwd().replace('final_data',heart_file_path)+heart_rate_file)\n",
     "\n",
     "df_heart_rate['dateTime'] = pd.to_datetime(df_heart_rate['dateTime'])\n",
-    "print(df_heart_rate.dtypes)"
+    "#print(df_heart_rate.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "merge() got multiple values for argument 'on'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m heart_temp \u001b[38;5;241m=\u001b[39m df_heart_rate[(df_heart_rate[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_start) \u001b[38;5;241m&\u001b[39m (df_heart_rate[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_end)]\n\u001b[0;32m     23\u001b[0m phone_temp \u001b[38;5;241m=\u001b[39m df_phone[(df_phone[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_start) \u001b[38;5;241m&\u001b[39m (df_phone[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_end)]\n\u001b[1;32m---> 25\u001b[0m merge_result \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_mat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf_band\u001b[49m\u001b[43m,\u001b[49m\u001b[43mheart_temp\u001b[49m\u001b[43m,\u001b[49m\u001b[43mphone_temp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdateTime\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mouter\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m merge_result \u001b[38;5;241m=\u001b[39m merge_result[(df_mat_band[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_start) \u001b[38;5;241m&\u001b[39m (df_mat_band[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdateTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39mmerge_time_end)]\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m#merge_data = pd.merge(df_phone, df_heart_rate, on='dateTime', how='inner')\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m#merge_data.to_csv(os.getcwd()+'//raw_data_merge'+raw_marge_file[i],index=False)\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: merge() got multiple values for argument 'on'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#合并后数据的存储路径\n",
     "raw_marge_file=['walk_merge_raw.csv','bike_merge_raw.csv','run_merge_raw.csv','sit_merge_raw.csv','syn_merge_raw.csv']\n",
     "\n",
-    "for i in range(0,1):\n",
+    "for i in range(0,5):\n",
     "    #读取band数据\n",
     "    df_band=pd.read_csv(os.getcwd().replace('final_data',band_file_path)+ band_file[i])\n",
     "    df_band['dateTime'] = pd.to_datetime(df_band['dateTime'])\n",
@@ -357,20 +193,18 @@
     "    merge_time_start = max(band_start,mat_start)\n",
     "    merge_time_end = min(band_end,mat_end)\n",
     "    \n",
+    "    #筛选心跳和手机数据的时间段\n",
     "    heart_temp = df_heart_rate[(df_heart_rate['dateTime']>=merge_time_start) & (df_heart_rate['dateTime']<=merge_time_end)]\n",
     "    phone_temp = df_phone[(df_phone['dateTime']>=merge_time_start) & (df_phone['dateTime']<=merge_time_end)]\n",
     "    \n",
     "    dfs=[df_band,df_mat,heart_temp,phone_temp]\n",
-    "    merge_result = pd.concat(dfs)\n",
-    "    merge_result = merge_result[(df_mat_band['dateTime']>=merge_time_start) & (df_mat_band['dateTime']<=merge_time_end)]\n",
+    "    #合并数据\n",
+    "    merge_result = reduce(lambda left, right: pd.merge(left, right, on='dateTime', how='outer'), dfs)\n",
+    "    #筛选合并后的数据时间段\n",
+    "    merge_result = merge_result[(merge_result['dateTime']>=merge_time_start) & (merge_result['dateTime']<=merge_time_end)]\n",
+    "    #保存合并后的数据\n",
+    "    merge_result.to_csv(os.getcwd()+'//raw_data_merge//'+raw_marge_file[i],index=False)\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    #merge_data = pd.merge(df_phone, df_heart_rate, on='dateTime', how='inner')\n",
-    "    \n",
-    "    #merge_data.to_csv(os.getcwd()+'//raw_data_merge'+raw_marge_file[i],index=False)\n",
     "    \n",
     "    \n",
     "      "
