--- a/final_data/cleam_data.ipynb
+++ b/final_data/cleam_data.ipynb
@@ -13,10 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sydwi\\Desktop\\QSML\\data\\QS4ML-VU-100\\final_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "raw_merge_data_dir = os.getcwd() + '\\\\cleaned_merge_data'\n",
+    "raw_merge_data_files = ['walk_merge_raw.csv', 'bike_merge_raw.csv', 'run_merge_raw.csv', 'sit_merge_raw.csv', 'syd_merge_raw.csv']\n",
+    "df_list = []\n",
+    "for i in raw_merge_data_files:\n",
+    "    df = pd.read_csv(raw_merge_data_dir + '\\\\' + i)\n",
+    "    df_list.append(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sydwi\\Desktop\\QSML\\data\\QS4ML-VU-100\\final_data\\cleaned_merge_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw_merge_data_dir)"
+   ]
   }
  ],
  "metadata": {
