--- a/final_data/merge_data.ipynb
+++ b/final_data/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,34 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dateTime    datetime64[ns]\n",
-      "usage               object\n",
-      "type                object\n",
-      "dtype: object\n",
-      "Index(['dateTime', 'usage', 'type'], dtype='object')\n",
-      "(244, 3)\n",
-      "             dateTime usage              type\n",
-      "0 2024-06-06 11:48:01   use   ACTIVITY_PAUSED\n",
-      "1 2024-06-06 11:48:01   use  ACTIVITY_RESUMED\n",
-      "2 2024-06-06 11:48:02   use  ACTIVITY_STOPPED\n",
-      "3 2024-06-06 11:48:03   use   ACTIVITY_PAUSED\n",
-      "4 2024-06-06 11:48:03   use  ACTIVITY_RESUMED\n",
-      "               dateTime usage                    type\n",
-      "239 2024-06-06 12:21:34   use         KEYGUARD_HIDDEN\n",
-      "240 2024-06-06 12:21:35   off  SCREEN_NON_INTERACTIVE\n",
-      "241 2024-06-06 12:21:35   off         ACTIVITY_PAUSED\n",
-      "242 2024-06-06 12:21:35   off        ACTIVITY_STOPPED\n",
-      "243 2024-06-06 12:21:36    on          KEYGUARD_SHOWN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#处理phone数据\n",
     "df_phone_test = pd.read_csv(os.getcwd().replace('final_data',phone_file_path)+ phone_file[0])\n",
@@ -152,6 +127,7 @@
     "df_phone = pd.concat([df_phone_test,df_phone_train],ignore_index=True)\n",
     "# 重命名时间戳，统一为dateTime\n",
     "df_phone.rename(columns={'time': 'dateTime'}, inplace=True)\n",
+    "df_phone.rename(columns={'type': 'deviceStatus'}, inplace=True)\n",
     "# 把时间戳转化为datetime格式\n",
     "df_phone['dateTime'] = pd.to_datetime(df_phone['dateTime'])\n",
     "# 按时间戳排序\n",
@@ -168,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +179,7 @@
     "    #筛选合并后的数据时间段\n",
     "    merge_result = merge_result[(merge_result['dateTime']>=merge_time_start) & (merge_result['dateTime']<=merge_time_end)]\n",
     "    #保存合并后的数据\n",
-    "    merge_result.to_csv(os.getcwd()+'//raw_data_merge//'+raw_marge_file[i],index=False)\n",
+    "    merge_result.to_csv(os.getcwd()+'//raw_merge_data//'+raw_marge_file[i],index=False)\n",
     "    \n",
     "    \n",
     "    \n",
