--- a/final_data/cleam_data.ipynb
+++ b/final_data/cleam_data.ipynb
@@ -30,34 +30,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_merge_data_dir = os.getcwd() + '\\\\cleaned_merge_data'\n",
-    "raw_merge_data_files = ['walk_merge_raw.csv', 'bike_merge_raw.csv', 'run_merge_raw.csv', 'sit_merge_raw.csv', 'syd_merge_raw.csv']\n",
+    "raw_merge_data_dir = os.getcwd() + '\\\\raw_merge_data'\n",
+    "raw_merge_data_files = ['walk_merge_raw.csv', 'bike_merge_raw.csv', 'run_merge_raw.csv', 'sit_merge_raw.csv', 'syn_merge_raw.csv']\n",
+    "\n",
+    "#所有dataframe都存在这里\n",
     "df_list = []\n",
-    "for i in raw_merge_data_files:\n",
-    "    df = pd.read_csv(raw_merge_data_dir + '\\\\' + i)\n",
+    "\n",
+    "for i in range(len(raw_merge_data_files)):\n",
+    "    df = pd.read_csv(raw_merge_data_dir + '\\\\' + raw_merge_data_files[i], low_memory=False)\n",
     "    df_list.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\sydwi\\Desktop\\QSML\\data\\QS4ML-VU-100\\final_data\\cleaned_merge_data\n"
+      "<class 'pandas.core.frame.DataFrame'>\n"
      ]
     }
    ],
-   "source": [
-    "print(raw_merge_data_dir)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
