--- a/final_data/merge_data.ipynb
+++ b/final_data/merge_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,69 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#检查一下读取后的文件\n",
-    "for i in range(0,5):\n",
-    "    df_band=pd.read_csv(os.getcwd().replace('final_data',band_file_path)+ band_file[i])\n",
-    "    print('check band data-------------------------')\n",
-    "    print(df_band.shape)\n",
-    "    print(df_band.dtypes)\n",
-    "    print(df_band.iloc[0,0])\n",
-    "    print(df_band.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_heart_rate = pd.read_csv(os.getcwd().replace('final_data',heart_file_path)+heart_rate_file) \n",
-    "print('check heart data-------------------------')\n",
-    "print(df_heart_rate.shape)\n",
-    "print(df_heart_rate.dtypes)\n",
-    "print(df_heart_rate.iloc[0,0])\n",
-    "print(df_heart_rate.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(0,5):\n",
-    "    df_mat=pd.read_csv(os.getcwd().replace('final_data',mat_file_path)+ mat_file[i])\n",
-    "    print('check mat data-------------------------')\n",
-    "    print(df_mat.shape)\n",
-    "    print(df_mat.dtypes)\n",
-    "    print(df_mat.iloc[0,0])\n",
-    "    print(df_mat.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for i in range(0,2):\n",
-    "    df_phone = pd.read_csv(os.getcwd().replace('final_data',phone_file_path)+ phone_file[i])\n",
-    "    print('check phone data-------------------------')\n",
-    "    print(df_phone.shape)\n",
-    "    print(df_phone.dtypes)\n",
-    "    print(df_phone.iloc[0,0])\n",
-    "    print(df_phone.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,15 +76,51 @@
     "#处理heart数据\n",
     "df_heart_rate = pd.read_csv(os.getcwd().replace('final_data',heart_file_path)+heart_rate_file)\n",
     "\n",
-    "df_heart_rate['dateTime'] = pd.to_datetime(df_heart_rate['dateTime'])\n",
-    "#print(df_heart_rate.dtypes)"
+    "df_heart_rate['dateTime'] = pd.to_datetime(df_heart_rate['dateTime'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 1，合并数据集中的非空值个数为 1\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 6，合并数据集中的非空值个数为 9\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n",
+      "原始数据集中的非空值个数为 7，合并数据集中的非空值个数为 7\n"
+     ]
+    }
+   ],
    "source": [
     "#合并后数据的存储路径\n",
     "raw_marge_file=['walk_merge_raw.csv','bike_merge_raw.csv','run_merge_raw.csv','sit_merge_raw.csv','syn_merge_raw.csv']\n",
@@ -160,14 +134,15 @@
     "    df_mat.rename(columns={'Timestamp': 'dateTime'}, inplace=True)\n",
     "    df_mat['dateTime'] = pd.to_datetime(df_mat['dateTime'])\n",
     "    \n",
+    "    \n",
     "    #计算时间起始\n",
     "    band_start = df_band['dateTime'][0]\n",
     "    band_end = df_band['dateTime'][len(df_band)-1]\n",
     "    mat_start = df_mat['dateTime'][0]\n",
     "    mat_end = df_mat['dateTime'][len(df_mat)-1]\n",
     "    #计算合并时间起始\n",
-    "    merge_time_start = max(band_start,mat_start)\n",
-    "    merge_time_end = min(band_end,mat_end)\n",
+    "    merge_time_start = min(band_start,mat_start)\n",
+    "    merge_time_end = max(band_end,mat_end)\n",
     "    \n",
     "    #筛选心跳和手机数据的时间段\n",
     "    heart_temp = df_heart_rate[(df_heart_rate['dateTime']>=merge_time_start) & (df_heart_rate['dateTime']<=merge_time_end)]\n",
@@ -180,6 +155,9 @@
     "    merge_result = merge_result[(merge_result['dateTime']>=merge_time_start) & (merge_result['dateTime']<=merge_time_end)]\n",
     "    #保存合并后的数据\n",
     "    merge_result.to_csv(os.getcwd()+'//raw_merge_data//'+raw_marge_file[i],index=False)\n",
+    "    \n",
+    "\n",
+    "\n",
     "    \n",
     "    \n",
     "    \n",
