--- a/final_data/cleam_data.ipynb
+++ b/final_data/cleam_data.ipynb
@@ -49,7 +49,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "清洗数据"
+    "清洗手环数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "清洗手机系统数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "清洗MATLAB数据"
    ]
   },
   {
@@ -1557,7 +1585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
