change: process_mat_data

--- a/final_data/cleam_data.ipynb
+++ b/final_data/cleam_data.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_dataframe(df):\n",
+    "def process_mat_data(df):\n",
     "    print(\"Processing\" + str(df) + \"...\")\n",
     "    df = remove_outliers_and_apply_thresholds(df, columns_to_check, thresholds)\n",
     "    data = convert_to_datetime(df)\n",
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_dfs = [process_dataframe(df) for df in df_list]"
+    "processed_dfs = [process_mat_data(df) for df in df_list]"
    ]
   }
  ],
