Update clean phone data

--- a/final_data/clean_data.ipynb
+++ b/final_data/clean_data.ipynb
@@ -73,7 +73,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lengths = [len(df) for df in df_list]\n",
+    "# 将lengths中的每个值相加到一起\n",
+    "print(lengths)\n",
+    "print(sum(lengths))\n",
+    "# 读取df_list变量，将这个list按照df_list[0]、1、2、3、4的顺序纵向合并为一个dataframe，名为df_raw。\n",
+    "df_raw = pd.concat(df_list, axis=0, ignore_index=True)\n",
+    "# 输出df_raw的行数\n",
+    "print(len(df_raw))\n",
+    "\n",
+    "# 处理 'usage' 列的空值\n",
+    "usage = 'use'\n",
+    "for i, row in df_raw.iterrows():\n",
+    "    if pd.isna(row['usage']):\n",
+    "        df_raw.at[i, 'usage'] = usage\n",
+    "    else:\n",
+    "        usage = row['usage']\n",
+    "        \n",
+    "# 处理 'deviceStatus' 列的空值\n",
+    "if pd.isna(df_raw.at[0, 'deviceStatus']):\n",
+    "    df_raw.at[0, 'deviceStatus'] = 'ACTIVITY_PAUSED'\n",
+    "\n",
+    "df_raw['deviceStatus'] = df_raw['deviceStatus'].ffill()  # 向上填充\n",
+    "\n",
+    "# 根据 'lengths' 列表将 'df_raw' 分割成 'df_list'\n",
+    "df_list = []\n",
+    "start = 0\n",
+    "for length in lengths:\n",
+    "    df_list.append(df_raw.iloc[start:start+length])\n",
+    "    start += length\n",
+    "\n",
+    "print(\"啦啦啦啦啦啦啦\")\n",
+    "lengths = [len(df) for df in df_list]\n",
+    "# 将lengths中的每个值相加到一起\n",
+    "print(lengths)\n",
+    "print(sum(lengths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 保存 'df_list' 到 '../test' 文件夹\n",
+    "for i in range(len(raw_merge_data_files)):\n",
+    "    df_list[i].to_csv(os.getcwd() + '/../temp/' + raw_merge_data_files[i], index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
