--- a/final_data/GPS_test.ipynb
+++ b/final_data/GPS_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_28792\\692278334.py:13: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_6788\\692278334.py:13: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  merged_data = pd.read_csv(os.getcwd()+merged_file_path+raw_marge_file[i])\n"
      ]
     },
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_28792\\692278334.py:13: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_6788\\692278334.py:13: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  merged_data = pd.read_csv(os.getcwd()+merged_file_path+raw_marge_file[i])\n"
      ]
     }
@@ -107,6 +107,41 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_6788\\3381613386.py:2: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  merged_data = pd.read_csv(os.getcwd()+merged_file_path+raw_marge_file[i])\n",
+      "C:\\Users\\sydwi\\AppData\\Local\\Temp\\ipykernel_6788\\3381613386.py:2: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  merged_data = pd.read_csv(os.getcwd()+merged_file_path+raw_marge_file[i])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62 62\n",
+      "43 43\n",
+      "16 16\n",
+      "51 51\n",
+      "67 67\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    merged_data = pd.read_csv(os.getcwd()+merged_file_path+raw_marge_file[i])\n",
+    "    non_phone_usage = merged_data[\"usage\"].notna().sum()\n",
+    "    non_phone_deviceStatus = merged_data[\"deviceStatus\"].notna().sum()\n",
+    "    print(non_phone_usage,non_phone_deviceStatus)"
    ]
   }
  ],
