--- a/final_data/clean_data.ipynb
+++ b/final_data/clean_data.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,8 @@
     "    \"course\": (0, 360),\n",
     "    \"hacc\": (0, 100),  # Assuming max horizontal accuracy of 100 meters\n",
     "    \"speed\": (0, 300),  # Assuming max speed of 300 m/s\n",
+    "    \"rate\": (40,220),\n",
+    "    \"rateZone\": (0, 1.0)\n",
     "}\n",
     "columns_to_check = [\n",
     "    \"altitude\",\n",
@@ -165,13 +167,15 @@
     "    \"latitude\",\n",
     "    \"longitude\",\n",
     "    \"speed\",\n",
+    "    \"rate\",\n",
+    "    \"rateZone\",\n",
     "]\n",
     "geolocation_columns = [\"altitude\", \"course\", \"latitude\", \"longitude\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
