--- a/Dataset/Preparation_dir/final_data/feature_engineer.ipynb
+++ b/Dataset/Preparation_dir/final_data/feature_engineer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "    (df['dateTime'] > walk_end) & (df['dateTime'] <= bike_end),\n",
     "]\n",
     "\n",
-    "choices = ['sit', 'Run', 'Walk', 'Bike']\n",
+    "choices = ['sit', 'run', 'walk', 'bike']\n",
     "    \n",
     "df['act'] = pd.Series(pd.Categorical(pd.cut(df['dateTime'].map(pd.Timestamp.timestamp), \n",
     "                                            bins=[float('-inf'), sit_end.timestamp(), run_end.timestamp(), walk_end.timestamp(), float('inf')],\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "相同的列: {'usage_off', 'Acceleration_X', 'Orientation_Z', 'act_run', 'MagneticField_Z', 'deviceStatus_SCREEN_NON_INTERACTIVE', 'deviceStatus_KEYGUARD_SHOWN', 'deviceStatus_NOTIFICATION_SEEN', 'AngularVelocity_X', 'usage_use', 'act_walk', 'speed', 'AngularVelocity_Z', 'rate', 'hacc', 'rateZone', 'BandAccZ', 'act_bike', 'act_sit', 'MagneticField_X', 'longitude', 'deviceStatus_CONFIGURATION_CHANGE', 'Orientation_Y', 'BandAccY', 'MagneticField_Y', 'Orientation_X', 'deviceStatus_ACTIVITY_PAUSED', 'deviceStatus_SCREEN_INTERACTIVE', 'deviceStatus_ACTIVITY_STOPPED', 'AngularVelocity_Y', 'Acceleration_Z', 'usage_on', 'deviceStatus_ACTIVITY_RESUMED', 'course', 'latitude', 'Acceleration_Y', 'deviceStatus_KEYGUARD_HIDDEN', 'altitude', 'BandAccX'}\n",
+      "仅在 train 中存在的列: {'deviceStatus_NOTIFICATION_INTERRUPTION'}\n",
+      "仅在 test 中存在的列: set()\n",
+      "相同的列: {'usage_off', 'Acceleration_X', 'Orientation_Z', 'act_run', 'MagneticField_Z', 'deviceStatus_SCREEN_NON_INTERACTIVE', 'deviceStatus_KEYGUARD_SHOWN', 'deviceStatus_NOTIFICATION_SEEN', 'AngularVelocity_X', 'usage_use', 'act_walk', 'speed', 'AngularVelocity_Z', 'rate', 'hacc', 'rateZone', 'BandAccZ', 'act_bike', 'act_sit', 'MagneticField_X', 'longitude', 'deviceStatus_CONFIGURATION_CHANGE', 'Orientation_Y', 'BandAccY', 'MagneticField_Y', 'Orientation_X', 'deviceStatus_ACTIVITY_PAUSED', 'deviceStatus_SCREEN_INTERACTIVE', 'deviceStatus_ACTIVITY_STOPPED', 'AngularVelocity_Y', 'Acceleration_Z', 'usage_on', 'deviceStatus_ACTIVITY_RESUMED', 'course', 'latitude', 'Acceleration_Y', 'deviceStatus_KEYGUARD_HIDDEN', 'altitude', 'BandAccX'}\n",
+      "仅在 train 中存在的列: set()\n",
+      "仅在 test 中存在的列: set()\n"
+     ]
+    }
+   ],
    "source": [
     "df_list = []\n",
     "for i in range(len(labeled_data_files)):\n",
@@ -131,6 +144,40 @@
     "test.drop(columns=['dateTime'], inplace=True)\n",
     "train = only_std_onehot(train)\n",
     "test = only_std_onehot(test)\n",
+    "\n",
+    "\n",
+    "columns_df1 = set(train.columns)\n",
+    "columns_df2 = set(test.columns)\n",
+    "\n",
+    "# 找出相同的列\n",
+    "common_columns = columns_df1.intersection(columns_df2)\n",
+    "\n",
+    "# 找出仅在 df1 中存在的列\n",
+    "unique_columns_df1 = columns_df1.difference(columns_df2)\n",
+    "\n",
+    "# 找出仅在 df2 中存在的列\n",
+    "unique_columns_df2 = columns_df2.difference(columns_df1)\n",
+    "\n",
+    "# 输出结果\n",
+    "print(\"相同的列:\", common_columns)\n",
+    "print(\"仅在 train 中存在的列:\", unique_columns_df1)\n",
+    "print(\"仅在 test 中存在的列:\", unique_columns_df2)\n",
+    "\n",
+    "train=train.drop(columns=unique_columns_df1)\n",
+    "test=test.drop(columns=unique_columns_df2)\n",
+    "columns_df1 = set(train.columns)\n",
+    "columns_df2 = set(test.columns)\n",
+    "# 找出相同的列\n",
+    "common_columns = columns_df1.intersection(columns_df2)\n",
+    "\n",
+    "# 找出仅在 df1 中存在的列\n",
+    "unique_columns_df1 = columns_df1.difference(columns_df2)\n",
+    "\n",
+    "# 找出仅在 df2 中存在的列\n",
+    "unique_columns_df2 = columns_df2.difference(columns_df1)\n",
+    "print(\"相同的列:\", common_columns)\n",
+    "print(\"仅在 train 中存在的列:\", unique_columns_df1)\n",
+    "print(\"仅在 test 中存在的列:\", unique_columns_df2)\n",
     "\n",
     "\n",
     "train.to_csv(os.getcwd()+'/feature_engineering_data/only_std_onehot/' + 'train.csv', index=False)\n",
@@ -188,7 +235,7 @@
     "        df[f'{col}_rolling_min'] = df[col].rolling(window=window_size).min()\n",
     "        df[f'{col}_rolling_max'] = df[col].rolling(window=window_size).max()\n",
     "    df = df.fillna(0)\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
